--- a/backend/web/views/order/view.html
+++ b/backend/web/views/order/view.html
@@ -1,3 +1,4 @@
+{{ define "yield" }}
 <div class="page-head">
     <h2 class="page-head-title">订单管理</h2>
 </div>
@@ -44,3 +45,4 @@
         </div>
     </div>
 </div>
+{{end}}
