--- a/backend/web/views/product/view.html
+++ b/backend/web/views/product/view.html
@@ -1,3 +1,4 @@
+{{ define "yield" }}
 <div class="page-head">
     <h2 class="page-head-title">商品管理</h2>
 </div>
@@ -40,3 +41,4 @@
         </div>
     </div>
 </div>
+{{end}}
