added product detail page, reformatted the html files

--- a/frontend/web/views/product/result.html
+++ b/frontend/web/views/product/result.html
@@ -1,6 +1,8 @@
+{{ define "yield" }}
 <div style="text-align: center;font-size: 36px;">
   <div>
     {{.showMessage}}
   </div>
   {{.orderID}}
 </div>
+{{ end }}
