--- a/frontend/web/views/product/view.html
+++ b/frontend/web/views/product/view.html
@@ -1,4 +1,5 @@
 <!-- Navigation -->
+{{ define "yield" }}
 <header class="nav" xmlns="http://www.w3.org/1999/html">
 
   <div class="nav__holder nav--sticky">
@@ -742,3 +743,4 @@
 <script>
 
 </script>
+{{ end }}
