--- a/frontend/web/views/user/login.html
+++ b/frontend/web/views/user/login.html
@@ -1,3 +1,4 @@
+{{ define "yield" }}
 <div style="">
 <div style="width: 400px;margin:0 auto;">
     <form action="/user/login" method="POST">
@@ -13,3 +14,4 @@
     </form>
 </div>
 </div>
+{{ end }}
