--- a/frontend/web/views/user/register.html
+++ b/frontend/web/views/user/register.html
@@ -1,3 +1,4 @@
+{{ define "yield" }}
 <form aciton="/user/register" method="post">
     <div class="container">
         <label><b>别名</b></label>
@@ -10,3 +11,4 @@
     </div>
 
 </form>
+{{ end }}
