--- a/frontend/web/views/shared/productLayout.html
+++ b/frontend/web/views/shared/productLayout.html
@@ -188,9 +188,7 @@
 
 
 <main class="main oh" id="main">
-
-{{yield .}}
-
+    {{template "yield" .}}
 </main> <!-- end main-wrapper -->
 
 <!-- Footer -->
